# pii-detect-model

./: .dockerignore  .env.example  .gitignore  .ruff.toml  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pii-detect-plan.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
configs/: project.yaml
configs/data/: base.yaml  domain_randomized_v7_2.yaml  pools.yaml  source_registry.yaml  synthetic_sota_v2_resplit.yaml
configs/evaluation/: base.yaml  comparator_registry_v1_withdrawal.yaml  comparator_registry_v2_candidate.schema.json  comparator_registry_v2_generation_2_candidate.json  native_presidio_zh_ner_framework_hybrid_v2.freeze.json  native_presidio_zh_ner_framework_hybrid_v2_result_closure.freeze.json  open24_comparator_execution_replay_v1.schema.json  open24_comparator_prediction_provenance_v1.schema.json  pii_engineer_multi_v2_1_closed8_model_raw_v1.freeze.json  pii_engineer_multi_v2_1_closed8_model_raw_v1_result_closure.freeze.json  public_synthetic_quality_comparator_registry_v2.schema.json  public_synthetic_service_quality_result_v2.schema.json  public_synthetic_service_quality_v1.json  public_synthetic_service_quality_v1.schema.json  release_eval_v2_calibration_authorization_v1.schema.json  release_eval_v2_internal_unlock_v1.schema.json  release_eval_v2_prediction_provenance_v1.schema.json  synthetic_v1_3_community_rc.yaml  synthetic_v1_3_community_rc_amendment_v2.yaml  synthetic_v1_3_community_rc_amendment_v3.yaml  synthetic_v1_3_community_rc_amendment_v4.yaml  synthetic_v1_3_community_rc_amendment_v5.yaml  synthetic_v1_3_community_rc_amendment_v6.yaml
configs/model/: base.yaml
configs/presidio/: base.yaml  calibration.example.json  cn_common.yaml  cn_common_v6.yaml  context.yaml
configs/release/: community_cascade_release_v2.artifact-evidence.schema.json  community_cascade_release_v2.candidate-replay-evidence.schema.json  community_cascade_release_v2.json  community_cascade_release_v2.quality-replay-evidence.schema.json  community_cascade_release_v2.receipt.schema.json  community_cascade_release_v2.replay-receipt.schema.json  community_cascade_release_v2.schema.json  community_cascade_release_v2.verification-receipt.schema.json  community_service_source_identity_v3.schema.json  community_service_source_identity_v4.schema.json  community_v2_github_release_assets_receipt.schema.json  community_v2_hf_download_provenance.schema.json  community_v2_post_attachment_verification.schema.json  community_v2_publication_package_verification.schema.json  community_v2_publication_receipt.schema.json  community_v2_publication_successor.schema.json  private_security_channel_waiver_receipt.schema.json  tested_private_security_channel_receipt.schema.json
configs/train/: aiguard24_sota_v3_resplit_selection.json  base.yaml  qwen3_0_6b_full_attention.yaml  synthetic_v1_3_full_from_jpt_lora.yaml  synthetic_v1_3_jpt_lora.yaml
docker/: PACKAGE_README.md  README.md  inference.Dockerfile  train.Dockerfile
docs/: aiguard24_full_model_and_cascade_technical_guide.md  annotation_guidelines.md  baseline_matrix.md  benchmark_landscape.md  calibration.md  cascade-architecture.md  cascade-benchmark.md  cascade-deployment.md  cascade-resource-benchmark.md  community-cascade-release-v2.md  community-model-service.md  data_contract.md  evaluation_provenance.md  model-training-technical-report.md  public_synthetic_quality_v2.md  release.md  release_eval_v2_performance_harness.md  release_eval_v2_stage_gate.md  synthetic_data.md  test_isolation.md
examples/data/: synthetic_inputs.jsonl
examples/python/: cascade_detect.py  full_bie73_cascade.py  full_bie73_model.py  model_only.py  presidio_engine.py
model_cards/: PII_ZH_QWEN3_0_6B_24CLASS_PUBLICATION.md  PII_ZH_QWEN3_0_6B_24CLASS_RC1.md  README.md  model-index.yml
release/: dependency-scan.example.json  dependency-scan.schema.json  dependency-security-exceptions.example.json  dependency-security-exceptions.schema.json  release_checklist.md  synthetic-canaries.example.json
release/community-v2-rc1/: PRIVATE_SECURITY_CHANNEL_WAIVER.md  (+3 more)
scripts/: apply_calibration.py  assemble_release_evidence.py  audit_openpii.py  audit_tokenizer_alignment.py  benchmark_cascade.py  benchmark_release_eval_v2_candidate.py  build_b3_full_bie73_hf_package.py  build_community_cascade_release_v2_contract.py  build_community_v2_github_release_assets_receipt.py  build_community_v2_publication_receipt.py  build_community_v2_publication_successor.py  build_comparator_registry_v2_candidate.py  build_model_card_evidence_v2.py  build_private_security_channel_waiver_receipt.py  build_release.py  build_service_quality_suite.py  build_tested_private_security_channel_receipt.py  calibrate_predictions.py  collect_community_v2_remote_evidence.py  community_contract_utils.py  create_prediction_manifest.py  create_system_prediction_manifest.py  evaluate.py  evaluate_bio24_checkpoint.py  evaluate_cascade.py  export_release_provenance.py  fetch_public_data.py  fuse_predictions.py  generate_release_eval_v2_candidate_predictions.py  generate_release_report.py  generate_sbom.py  generate_template_candidates.py  materialize_community_v2_hf_snapshot.py  materialize_domain_randomized_v7_2.py  materialize_synthetic_data.py  materialize_synthetic_sota_v2_resplit.py  migrate_training_source_lineage.py  predict.py  predict_rules.py  prepare_evaluation_data.py  (+26 more)
(+286 files in other folders)
